--- a/dokkandle.html
+++ b/dokkandle.html
@@ -4,15 +4,15 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Dokkandle</title>
-        <link rel="stylesheet" href="css/style.css">
+        <title> Dokkandle </title>
+        <link rel="stylesheet" href="tuto1.css">
     </head>
     <body>
-        <h1> DOKKAN BATTLE SOLO</h1>
+        <div id="carte">
+        <h1> DOKKAN BATTLE SOLO </h1>
         <img src="image/a.png" alt="dokkan">
-        <p> DOKKAN DLE</p>
-        <p> DOKKAN DLE</p>
         <p> caca </br>
         DOKKAN DLE</p>
+    </div>
     </body>
 </html>
