--- a/classic.html
+++ b/classic.html
@@ -32,6 +32,7 @@
       <div class="grid-item">Race</div>
       <div class="grid-item">Année</div>
     </div>
+    <div id="res"></div>
   </div>
   <script src="script.js"></script>
 </body>
